# DoPark_GangMin_ExamenCPP

./: CMakeLists.txt  README.md  main.cpp
Ejercicio1/: numero.cpp  numero.h
Ejercicio2/: DiaSemana.cpp  DiaSemana.h
Ejercicio3/: PromedioCalificaciones.cpp  PromedioCalificaciones.h
Ejercicio4/: Promocion3x2.cpp  Promocion3x2.h
