cmake_minimum_required(VERSION 3.29)
project(DoPark_GangMin_ExamenCPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(DoPark_GangMin_ExamenCPP main.cpp
        Ejercicio1/numero.cpp
        Ejercicio1/numero.h
        Ejercicio2/DiaSemana.cpp
        Ejercicio2/DiaSemana.h
        Ejercicio3/PromedioCalificaciones.cpp
        Ejercicio3/PromedioCalificaciones.h
        Ejercicio4/Promocion3x2.cpp
        Ejercicio4/Promocion3x2.h)
